<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.EditScreen">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_crop"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:clickable="true"
                android:contentDescription="@string/crop"
                android:focusable="true"
                android:src="@drawable/ic_crop"
                app:tint="@color/text_color" />

            <ImageView
                android:id="@+id/iv_flip_left"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:clickable="true"
                android:contentDescription="@string/crop"
                android:focusable="true"
                android:src="@drawable/ic_rotate_left"
                app:tint="@color/text_color" />

            <ImageView
                android:id="@+id/iv_flip_right"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"

                android:clickable="true"
                android:contentDescription="@string/crop"
                android:focusable="true"
                android:src="@drawable/ic_rotate_right"
                app:tint="@color/text_color" />

        </LinearLayout>

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/iv_info"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/info"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toTopOf="@id/iv_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_color" />

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@id/horizontalScrollView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/iv_info" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"

        android:background="@color/line_color"
        app:layout_constraintBottom_toTopOf="@id/horizontalScrollView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_save"
        app:layout_constraintVertical_chainStyle="spread" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/bg_color"
        android:text="@string/save"
        android:textStyle="bold"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView1"
        app:layout_constraintVertical_chainStyle="spread" />
</androidx.constraintlayout.widget.ConstraintLayout>